package control;

public class Setting {
    public static final double exp = 0.25;
    public static final int WIDTH = 20;
    public static final int HEIGHT = 13;
    public static final int MAX_WIDTH = 100;
    public static final int MAX_HEIGHT = 100;
    public static int R;
    public static int L;
    public static final long timeBombsDestroy = 2000_000_000;// đơn vị nano giây
    public static final long timeBomberDestroy = 600_000_000;// đơn vị nano giây
    public static final long timeEnemyDestroy = 1000_000_000;// đơn vị nano giây
    public static final long timeBrickDestroy = 500_000_000;// đơn vị nano giây
    public static final long timeFlameDestroy = 500_000_000;// đơn vị nano giây
    public static int sizeBomb = 1;
    public static double speedAdd = 0.02;
    public static double speedBomber = 0.05;
    public static double speedBallom = 0.02;
    public static double speedOneal = 0.05;
    public static int maxLevel = 3;
}
