package entities.dow;

import entities.Entity;
import javafx.scene.image.Image;

public class BombItem extends Entity {
    public BombItem(double x, double y, Image img) {
        super(x, y, img);
    }

    @Override
    public void update() {

    }
}
