package entities.dow;

import entities.Entity;
import javafx.scene.image.Image;

public class Wall extends Entity {

    public Wall(double x, double y, Image img) {
        super(x, y, img);
    }

    @Override
    public void update() {

    }
}
