package entities.up;

import entities.Entity;
import javafx.scene.image.Image;

public class Bomb extends Entity {
    public Bomb(double x, double y, Image img) {
        super(x, y, img);
    }

    @Override
    public void update() {

    }
}
