package entities.up;

import entities.Entity;
import javafx.scene.image.Image;


public class Oneal extends Entity {
    public Oneal(double x, double y, Image img) {
        super(x, y, img);
    }

    @Override
    public void update() {

    }
}
